classDiagram


class Annotation {
  str title
  str content
  datetime created
  str author
}


class Aspect {
  str type
  str source_id
  str target_id
  float angle
  float orb
}


class AspectDefinition {
  str id
  str glyph
  float angle
  float default_orb
  Dict~str,str~ i18n
  bool enabled
  str color
  int importance
  str line_style
  float line_width
  bool show_label
  List~AspectContext(Enum)~ valid_contexts
  float interpretation_weight
}


class AspectSettings {
  str id
  bool enabled
  float orb
  str color
  int importance
  str line_style
  float line_width
  bool show_label
}


class AstroModel {
  str name
  List~BodyDefinition~ body_definitions
  List~AspectDefinition~ aspect_definitions
  List~Sign~ signs
  ModelSettings settings
  EngineType(Enum) engine
  ZodiacType(Enum) zodiac_type
  Ayanamsa(Enum) ayanamsa
  str school
  int version
}


class AstrologySchool {
  str id
  str default_model
  str extends
}


class Attachment {
  str filename
  str url
  str type
}


class BodyDefinition {
  str id
  str glyph
  str formula
  Element(Enum) element
  float avg_speed
  float max_orb
  Dict~str,str~ i18n
  bool enabled
  ObjectType(Enum) object_type
  Dict~str,str~ computation_map
  bool requires_location
  bool requires_house_system
}


class CelestialBody {
  str id
  str definition_id
  float degree
  str sign
  bool retrograde
  float speed
}


class ChartAxes {
  float asc
  float desc
  float mc
  float ic
}


class ChartCalculation {
  Dict~str,any~ positions
  Dict~str,any~ motion
  List~Dict~str,any~~ aspects
  Dict~str,float~ axes
  List~float~ house_cusps
  Dict~str,any~ moon_details
  str chart_id
  str backend_used
  bool fallback_used
  str ephemeris_source
  List~str~ warnings
}


class ChartConfig {
  ChartMode(Enum) mode
  HouseSystem(Enum) house_system
  ZodiacType(Enum) zodiac_type
  List~str~ included_points
  Dict~str,float~ aspect_orbs
  str display_style
  str color_theme
  List~str~ selected_aspects
  str override_ephemeris
  str model
  EngineType(Enum) engine
  Ayanamsa(Enum) ayanamsa
  List~str~ observable_objects
  TimeSystem(Enum) time_system
  ModelOverrides model_overrides
}


class ChartInstance {
  str id
  ChartSubject subject
  ChartConfig config
  Horoscope computed_chart
  List~str~ tags
  Dict~str,str~ tag_colors
  str roden_rating
}


class ChartPreset {
  str name
  ChartConfig config
}


class ChartRelation {
  RelationType(Enum) type
  str source
  str target
  str method
  DateRange time_span
}


class ChartSubject {
  str id
  str name
  datetime event_time
  Location location
}


class ComputedAspect {
  str from_id
  str to_id
  str type
  float angle
  float orb
  float exact_angle
  bool applying
  bool separating
}


class CurrentModelReport {
  str requested_school
  str resolved_school
  str requested_model
  str resolved_model
  str source
  List~str~ available_models
  AstroModel model
  EffectiveModelSettings effective_settings
  ModelOverrides model_overrides
  List~str~ warnings
  List~Diagnostic~ diagnostics
}


class DateRange {
  datetime start
  datetime end
}


class Diagnostic {
  str code
  DiagnosticSeverity(Enum) severity
  str message
  str path
}


class EffectiveModelSettings {
  HouseSystem(Enum) default_house_system
  List~str~ default_bodies
  List~str~ default_aspects
  List~str~ default_transit_aspects
  List~str~ default_direction_aspects
  List~str~ default_transit_bodies
  List~str~ default_direction_bodies
  Dict~str,float~ aspect_orbs
  float standard_orb
  EngineType(Enum) engine
  ZodiacType(Enum) zodiac_type
  Ayanamsa(Enum) ayanamsa
  TimeSystem(Enum) time_system
  float degrees_in_circle
  float obliquity_j2000
  float coordinate_tolerance
  EffectiveSettingsSources sources
}


class EffectiveSettingsSources {
  SettingSource(Enum) default_house_system
  SettingSource(Enum) default_bodies
  SettingSource(Enum) default_aspects
  Dict~str,SettingSource(Enum)~ aspect_orbs
  SettingSource(Enum) standard_orb
  SettingSource(Enum) engine
  SettingSource(Enum) zodiac_type
  SettingSource(Enum) ayanamsa
  SettingSource(Enum) time_system
  SettingSource(Enum) computational_constants
}


class ElementColorSettings {
  str fire
  str earth
  str air
  str water
}


class EphemerisSource {
  str name
  str backend
}


class Horoscope {
  datetime for_time
  Location location
  List~CelestialBody~ bodies
  List~House~ houses
  List~Aspect~ aspects
}


class House {
  int number
  float cusp_degree
  str sign
}


class LoadedWorkspace {
  Dict~str,any~ manifest
  Workspace workspace
  List~Diagnostic~ diagnostics
}


class Location {
  str name
  float latitude
  float longitude
  str timezone
  str utc_offset
  str location_mode
  str timezone_mode
}


class ModelOverrides {
  List~OverrideEntry~ points
  List~OverrideEntry~ aspects
  Dict~str,float~ override_orbs
}


class ModelSettings {
  HouseSystem(Enum) default_house_system
  List~str~ default_aspects
  List~str~ default_bodies
  float standard_orb
  List~str~ default_transit_aspects
  List~str~ default_direction_aspects
  List~str~ default_transit_bodies
  List~str~ default_direction_bodies
  float degrees_in_circle
  float obliquity_j2000
  float coordinate_tolerance
}


class OverrideEntry {
  str id
  str glyph
  float angle
  float default_orb
  List~str~ only_for
  Dict~str,str~ i18n
  bool computed
  bool enabled
  List~AspectContext(Enum)~ valid_contexts
  float interpretation_weight
}


class RadixPointColorSettings {
  Dict~str,str~ colors
}


class SettingsLayer {
  HouseSystem(Enum) house_system
  List~str~ bodies
  List~str~ aspects
  Dict~str,float~ aspect_orbs
  EngineType(Enum) engine
  ZodiacType(Enum) zodiac_type
  Ayanamsa(Enum) ayanamsa
  TimeSystem(Enum) time_system
  ModelOverrides model_overrides
}


class Sign {
  str name
  str glyph
  str abbreviation
  Element(Enum) element
  Dict~str,str~ i18n
}


class TransitSeriesCalculation {
  str source_chart_id
  Dict~str,str~ time_range
  str time_step
  List~TransitSeriesStep~ results
  str backend_used
  bool fallback_used
  str ephemeris_source
  List~str~ warnings
}


class TransitSeriesStep {
  str datetime
  Dict~str,any~ transit_positions
  List~Dict~str,any~~ aspects
}


class TransitSetup {
  int version
  str source_chart_id
  str transit_type
  str period_mode
  str from_date
  str from_time
  str to_date
  str to_time
  int time_step_seconds
  List~str~ transiting_bodies
  List~str~ transited_bodies
  List~str~ aspect_types
  bool house_transitions
  bool sign_transitions
  bool transit_limits
  bool precession_correction
  Dict~str,float~ aspect_orbs
  str school
  str model
  ModelOverrides model_overrides
  bool exact_hits
  bool station_events
}


class ViewLayout {
  str name
  LayoutStyle(Enum) layout_style
  List~str~ chart_instances
  List~ChartRelation~ relations
  List~ViewModule~ modules
}


class ViewModule {
  ViewModuleType(Enum) type
  Dict~any,any~ config
}


class Workspace {
  str owner
  List~ChartSubject~ subjects
  List~ChartInstance~ charts
  List~ChartPreset~ chart_presets
  List~ViewLayout~ layouts
  List~Annotation~ annotations
  str active_model
  WorkspaceDefaults default
  List~str~ aspects
  List~str~ bodies
  Dict~str,AstroModel~ models
  ModelOverrides model_overrides
  int schema_version
  str active_school
  Dict~str,AstrologySchool~ schools
  WorkspacePresentation presentation
  List~TransitSetup~ transit_analyses
}


class WorkspaceDefaults {
  HouseSystem(Enum) default_house_system
  List~str~ default_bodies
  List~str~ default_aspects
  Dict~str,float~ default_aspect_orbs
  Dict~str,str~ default_aspect_colors
  EngineType(Enum) ephemeris_engine
  str ephemeris_backend
  ElementColorSettings element_colors
  RadixPointColorSettings radix_point_colors
  Location default_location
  str language
  str theme
  TimeSystem(Enum) time_system
}


class WorkspaceEntityCounts {
  int subjects
  int charts
  int chart_presets
  int transit_analyses
  int layouts
  int annotations
}


class WorkspacePresentation {
  str theme
  str language
  str glyph_set
  ElementColorSettings element_colors
  RadixPointColorSettings radix_point_colors
  Dict~str,str~ aspect_colors
  Dict~str,float~ aspect_line_tier_style
}


class WorkspaceValidationReport {
  str owner
  str active_model
  bool valid
  WorkspaceEntityCounts counts
  List~Diagnostic~ diagnostics
}

AstroModel --> AspectDefinition
AstroModel --> BodyDefinition
AstroModel --> ModelSettings
AstroModel --> Sign
ChartConfig --> ModelOverrides
ChartInstance --> ChartConfig
ChartInstance --> ChartSubject
ChartInstance --> Horoscope
ChartPreset --> ChartConfig
ChartRelation --> DateRange
ChartSubject --> Location
CurrentModelReport --> AstroModel
CurrentModelReport --> Diagnostic
CurrentModelReport --> EffectiveModelSettings
CurrentModelReport --> ModelOverrides
EffectiveModelSettings --> EffectiveSettingsSources
Horoscope --> Aspect
Horoscope --> CelestialBody
Horoscope --> House
Horoscope --> Location
LoadedWorkspace --> Diagnostic
LoadedWorkspace --> Workspace
ModelOverrides --> OverrideEntry
SettingsLayer --> ModelOverrides
TransitSeriesCalculation --> TransitSeriesStep
TransitSetup --> ModelOverrides
ViewLayout --> ChartRelation
ViewLayout --> ViewModule
Workspace --> Annotation
Workspace --> AstroModel
Workspace --> AstrologySchool
Workspace --> ChartInstance
Workspace --> ChartPreset
Workspace --> ChartSubject
Workspace --> ModelOverrides
Workspace --> TransitSetup
Workspace --> ViewLayout
Workspace --> WorkspaceDefaults
Workspace --> WorkspacePresentation
WorkspaceDefaults --> ElementColorSettings
WorkspaceDefaults --> Location
WorkspaceDefaults --> RadixPointColorSettings
WorkspacePresentation --> ElementColorSettings
WorkspacePresentation --> RadixPointColorSettings
WorkspaceValidationReport --> Diagnostic
WorkspaceValidationReport --> WorkspaceEntityCounts
